SSH support for clone and review
Implemented a limited set of functionality for allowing to
integrate a Gerrit repository over Git/SSH.

Change-Id: I6b1896fb1fb43e1c47145c9e73a9d9f28ac37371